corrige css do row dentro de sa_produtos em produtos.php

--- a/wp-content/themes/tema2013/style.css
+++ b/wp-content/themes/tema2013/style.css
@@ -111,6 +111,11 @@ border-radius: 0px 50px;
 }
 
 /* produtos */
+
+#sa_produtos .row {
+margin-left: 0px;
+}
+
 #sa_produtos h2 {
 font-size: 16px;
 line-height: 120%;
