--- a/wp-content/themes/tema2013/style.css
+++ b/wp-content/themes/tema2013/style.css
@@ -19,6 +19,23 @@ body {
      padding-bottom: 40px; 
 } 
 
+/* body */
+body {
+background-image: url('img/net-bg2.gif');
+background-repeat: no-repeat;
+background-size: 100%;
+padding: 0px;
+}
+
+#sa_body {
+padding: 10px 0px 0px 0px;
+background: #fff;
+border-left: 10px solid #fff;
+border-right: 10px solid #fff;
+box-shadow: 0px 1px 70px #777;
+}
+
+
 /* header */
 
 .acima-menu {
