--- a/wp-content/themes/tema2013/style.css
+++ b/wp-content/themes/tema2013/style.css
@@ -62,6 +62,28 @@ float: right;
 margin-bottom: 12px;
 }
 
+/* carroucel */
+
+.carousel-caption p {
+margin-bottom: 0;
+text-shadow: 1px 1px 3px #000;
+}
+
+.carousel-caption h4 {
+margin: 0 0 5px;
+color: #000;
+text-shadow: 1px 1px 3px #fff;
+}
+
+.carousel-caption {
+background: rgba(0, 0, 0, 0.2);
+}
+
+.carousel-caption a:hover{
+	text-decoration: none;
+}
+
+
 /* home */
 #sa_call_actions ul {
 margin: 0px;
@@ -102,6 +124,9 @@ background: #eee;
 padding: 10px;
 margin: 0px;
 border-radius: 50px 0px;
+box-shadow: 5px 4px 10px #bbb;
+margin-bottom: 10px;
+border: 1px solid #999;
 }
 
 #sa_call_actions h2 {
