limita height e width máximos no carrocel de destaques

--- a/wp-content/themes/tema2013/style.css
+++ b/wp-content/themes/tema2013/style.css
@@ -39,6 +39,11 @@ box-shadow: 0px 1px 70px #777;
 box-shadow: 0px 0px 14px #bbb;
 }
 
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+max-height: 235px;
+max-width: 940px;
+}
+
 /* header */
 
 .acima-menu {
