--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -65,3 +65,23 @@ body {
 div#links-header {
 	margin-top: 20px;
 }
+
+div#login-area {
+background-color: #19ADAD;
+width: 365px;
+height: 40px;
+padding-top: 8px;
+padding-left: 8px;
+}
+
+img.fone {
+margin-right: 10px;
+top: -10px;
+position: relative;
+}
+
+a > span.fale-conosco,
+a:hover {
+	color: #333;
+	text-decoration: none;
+}
