--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -8,80 +8,11 @@ Version: 1.0.0
 
 */
 @import url('css/bootstrap.css'); 
+@import url('css/header.css'); 
+
 
 body {
 	background-color: #ccc;
 }
 
 
-/* #########################
-   ###       header      ###
-   #########################*/
-
-#header {
-	background-color: #fff;
-	padding-top: 15px;
-}
-
-.navbar {
-	margin-bottom: 0px;
-	border: none;
-}
-.navbar-default {
-	background-color: transparent;
-	border-color: transparent;
-}
-
-.navbar-nav > li > a {
-	padding: 0px 10px;
-}
-
-.navbar-nav > li {
-	border-left: 2px solid blue;
-}
-
-.navbar-nav > li.nodivider {
-	border-left: none;
-}
-
-#header .navbar > .container-fluid {
-	margin-top: 30px;
-	padding: 0px;
-}
-
-#header div#bs-example-navbar-collapse-1 {
-	padding: 0px;
-}
-
-#header input {
-	height: 23px;
-	width: 163px;
-}
-
-#header button.btn.btn-link {
-	padding: 0px;
-}
-
-div#links-header {
-	margin-top: 20px;
-}
-
-div#login-area {
-background-color: #19ADAD;
-width: 365px;
-height: 40px;
-padding-top: 8px;
-padding-left: 8px;
-}
-
-img.fone {
-margin-right: 10px;
-top: -10px;
-position: relative;
-}
-
-a > span.fale-conosco,
-a:hover {
-	color: #333;
-	text-decoration: none;
-}
