--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -16,5 +16,31 @@ body {
 	background-color: #fff;
 }
 
+.container-fluid {
+	padding: 0px;
+}
 
+/* ##################
+   ###    HOME    ###
+   ##################*/
 
+#myCarousel.carousel {
+position: relative;
+padding: 0px;
+z-index: -10;
+top: -112px;
+}
+
+.carousel-control {
+position: absolute;
+top: 150px;
+left: 0;
+bottom: 150px;
+width: 100px;
+opacity: 0.5;
+filter: alpha(opacity=50);
+font-size: 20px;
+color: #ffffff;
+text-align: center;
+text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
