--- a/wp-content/themes/sa2015/css/bootstrap.css
+++ b/wp-content/themes/sa2015/css/bootstrap.css
@@ -992,7 +992,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Open Sans', sans-serif;
+/*  font-family: 'Open Sans', sans-serif; */
   font-weight: 700;
   line-height: 1.1;
   color: inherit;
