--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -14,6 +14,11 @@ Version: 1.0.0
 
 body {
 	background-color: #fff;
+	color: #666;
+}
+
+.thumbnail .caption{
+	color: #666;
 }
 
 .container-fluid {
@@ -59,7 +64,7 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
 
 .carousel-caption {
-background: rgba(26, 178, 184, 0.68);
+background: rgba(27,127,155, 0.8);
 left: 90px;
 top: 150px;
 width: 500px;
@@ -82,7 +87,7 @@ overflow: hidden;
 }
 
 p.conheca {
-background: rgba(20, 195, 175, 0.27);
+background: rgba(138,181,209,0.8);
 width: 93px;
 padding: 3px 5px;
 margin: 0px;
@@ -105,7 +110,7 @@ font-size: 23px;
 
 .sa-col-1 {
 background: #ececec;
-padding: 16px;
+padding: 16px 16px 32px 16px;
 }
 
 #sa_call_actions h1 {
@@ -132,7 +137,6 @@ margin-bottom: 16px;
 }
 
 .sa-mais {
-margin: 15px 0px;
 color: #4393a9;
 font-size: 12px;
 font-weight: bold;
@@ -172,6 +176,10 @@ padding: 0px;
 border-radius: 0px;
 }
 
+#sa_call_actions .sa-proximo-webinar {
+	background-color: #a3d0e2;
+}
+
 #sa_call_actions .col-sm-9 {
 	padding: 0px;
 }
@@ -190,4 +198,59 @@ margin: 0px;
 
 #sa_call_actions .caption {
 padding-right: 0px;
+}
+
+.sa-whitepaper .caption.pull-right {
+border-left: solid 6px #4999af;
+}
+
+#sa_call_actions .sa-list-post .thumbnail {
+background: #fff;
+border: none;
+border-bottom: solid 1px #00acec;
+padding-bottom: 32px;
+}
+
+.sa-list-post .col-sm-2 {
+padding: 0px;
+}
+
+.sa-list-post h3 {
+color: #fff;
+text-align: center;
+}
+
+.sa-day {
+background: #8cc4db;
+margin: 0px;
+width: 100%;
+padding: 5px;
+font-weight: 800;
+border-radius: 5px 5px 0px 0px;
+}
+
+.sa-month {
+background: #8cc4db;
+margin: 0px;
+margin-top: 3px;
+font-size: 16px;
+padding: 2px;
+padding-bottom: 5px;
+border-radius: 0px 0px 5px 5px;
+}
+
+.sa-list-post .col-sm-10 {
+padding-right: 0px;
+}
+
+#sa_call_actions .sa-title-post {
+color: #000;
+font-size: 14px;
+font-weight: 600;
+text-transform: none;
+}
+
+#sa_call_actions .sa-author {
+color: #db7363;
+font-weight: 500;
 }
