--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -11,6 +11,19 @@ Version: 1.0.0
 @import url('css/header.css'); 
 @import url('css/footer.css'); 
 
+@font-face {
+	font-family: MyriadPro;
+	src: url('fonts/MYRIADPRO-REGULAR.OTF');
+	font-stretch: normal;
+}
+
+@font-face {
+	font-family: MyriadPro-cond;
+	src: url('fonts/MYRIADPRO-COND.OTF');
+	font-stretch: condensed;
+}
+
+
 
 body {
 	background-color: #fff;
@@ -208,7 +221,8 @@ border-left: solid 6px #4999af;
 background: #fff;
 border: none;
 border-bottom: solid 1px #00acec;
-padding-bottom: 32px;
+padding-bottom: 16px;
+margin-bottom: 	0px;
 }
 
 .sa-list-post .col-sm-2 {
@@ -224,7 +238,7 @@ text-align: center;
 background: #8cc4db;
 margin: 0px;
 width: 100%;
-padding: 5px;
+padding: 2px;
 font-weight: 800;
 border-radius: 5px 5px 0px 0px;
 }
@@ -233,7 +247,8 @@ border-radius: 5px 5px 0px 0px;
 background: #8cc4db;
 margin: 0px;
 margin-top: 3px;
-font-size: 16px;
+font-size: 14px;
+text-transform: capitalize;
 padding: 2px;
 padding-bottom: 5px;
 border-radius: 0px 0px 5px 5px;
@@ -241,11 +256,12 @@ border-radius: 0px 0px 5px 5px;
 
 .sa-list-post .col-sm-10 {
 padding-right: 0px;
+font-size: 10px;
 }
 
 #sa_call_actions .sa-title-post {
 color: #000;
-font-size: 14px;
+font-size: 12px;
 font-weight: 600;
 text-transform: none;
 }
@@ -253,4 +269,22 @@ text-transform: none;
 #sa_call_actions .sa-author {
 color: #db7363;
 font-weight: 500;
+}
+
+#sa_call_actions .thumbnail.post-final {
+border-bottom: none;
+}
+
+#sa_call_actions .btn-primary {
+color: #fff;
+}
+
+#sa_call_actions .sa-list-post p {
+height: 42px;
+overflow: hidden;
+}
+
+.seta-list-blog img {
+width: 10px;
+margin-left: 8px;
 }
