mantem organizado colocando css da home em home.css

--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -10,6 +10,7 @@ Version: 1.0.0
 @import url('css/bootstrap.css'); 
 @import url('css/header.css'); 
 @import url('css/footer.css'); 
+@import url('css/home.css'); 
 
 @font-face {
 	font-family: MyriadPro;
@@ -48,243 +49,3 @@ li {
 }
 
 
-/* ##################
-   ###    HOME    ###
-   ##################*/
-
-
-div#myCarousel {
-padding: 0px;
-margin-bottom: 40px;
-}
-
-a.carousel-control {
-background: black;
-}
-
-.carousel-control {
-position: absolute;
-top: 150px;
-left: 0;
-bottom: 150px;
-width: 50px;
-opacity: 0.5;
-filter: alpha(opacity=50);
-font-size: 20px;
-color: #ffffff;
-text-align: center;
-text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-}
-
-.carousel-caption {
-background: rgba(27,127,155, 0.8);
-left: 90px;
-top: 150px;
-width: 500px;
-height: 120px;
-text-align: left;
-padding: 10px 20px;
-}
-
-.carousel-caption a {
-	color: #fff;
-}
-
-.carousel-caption h4 {
-	font-size: 30px;
-}
-
-.carousel-caption p {
-height: 42px;
-overflow: hidden;
-}
-
-p.conheca {
-background: rgba(138,181,209,0.8);
-width: 93px;
-padding: 3px 5px;
-margin: 0px;
-position: absolute;
-right: 0;
-height: 27px;
-bottom: -27px;
-}
-
-span.seta {
-background: black;
-position: absolute;
-width: 27px;
-height: 33px;
-padding: 0px 7px;
-top: -2px;
-right: 0px;
-font-size: 23px;
-}
-
-.sa-col-1 {
-background: #ececec;
-padding: 16px 16px 32px 16px;
-}
-
-#sa_call_actions h1 {
-font-weight: bolder;
-color: #fff;
-text-shadow: 2px 3px 10px #888;
-text-transform: uppercase;
-}
-
-.sa-col-1 h1 {
-	padding: 0px;
-	margin: 0px 0px 16px 0px;
-
-}
-
-#sa_call_actions .sa-col-1 p {
-text-align: justify;
-letter-spacing: 3px;
-margin-bottom: 16px;
-}
-
-.sa-col-1 img {
-margin-bottom: 16px;
-}
-
-.sa-mais {
-color: #4393a9;
-font-size: 12px;
-font-weight: bold;
-}
-
-.sa-col-2 img, .sa-col-3 img {
-top: -70px;
-position: relative;
-z-index: -1;
-}
-
-.sa-titulo {
-height: 200px;
-overflow: hidden;
-padding: 16px 0px;
-}
-
-.sa-titulo h1{
-	margin: 0px;
-	padding: 0px 16px;
-}
-
-#sa_call_actions a{
-	color: inherit;
-}
-
-#sa_call_actions .row-fluid img {
-	position: relative;
-	top: 0px;
-	z-index: 0;
-}
-
-#sa_call_actions .thumbnail {
-background: #ddd;
-margin-top: 16px;
-padding: 0px;
-border-radius: 0px;
-}
-
-#sa_call_actions .sa-proximo-webinar {
-	background-color: #a3d0e2;
-}
-
-#sa_call_actions .col-sm-9 {
-	padding: 0px;
-}
-
-#sa_call_actions h2 {
-margin: 0px;
-font-size: 16px;
-text-transform: uppercase;
-color: #559aad;
-font-weight: 100;
-}
-
-#sa_call_actions p {
-margin: 0px;
-}
-
-#sa_call_actions .caption {
-padding-right: 0px;
-}
-
-.sa-whitepaper .caption.pull-right {
-border-left: solid 6px #4999af;
-}
-
-#sa_call_actions .sa-list-post .thumbnail {
-background: #fff;
-border: none;
-border-bottom: solid 1px #00acec;
-padding-bottom: 16px;
-margin-bottom: 	0px;
-}
-
-.sa-list-post .col-sm-2 {
-padding: 0px;
-}
-
-.sa-list-post h3 {
-color: #fff;
-text-align: center;
-}
-
-.sa-day {
-background: #8cc4db;
-margin: 0px;
-width: 100%;
-padding: 2px;
-font-weight: 800;
-border-radius: 5px 5px 0px 0px;
-}
-
-.sa-month {
-background: #8cc4db;
-margin: 0px;
-margin-top: 3px;
-font-size: 14px;
-text-transform: capitalize;
-padding: 2px;
-padding-bottom: 5px;
-border-radius: 0px 0px 5px 5px;
-}
-
-.sa-list-post .col-sm-10 {
-padding-right: 0px;
-font-size: 10px;
-}
-
-#sa_call_actions .sa-title-post {
-color: #000;
-font-size: 12px;
-font-weight: 600;
-text-transform: none;
-}
-
-#sa_call_actions .sa-author {
-color: #db7363;
-font-weight: 500;
-}
-
-#sa_call_actions .thumbnail.post-final {
-border-bottom: none;
-}
-
-#sa_call_actions .btn-primary {
-color: #fff;
-}
-
-#sa_call_actions .sa-list-post p {
-height: 42px;
-overflow: hidden;
-}
-
-.seta-list-blog img {
-width: 10px;
-margin-left: 8px;
-}
