--- a/wp-content/themes/sa2015/css/home.css
+++ b/wp-content/themes/sa2015/css/home.css
@@ -42,6 +42,8 @@ padding: 10px 20px;
 
 .carousel-caption h4 {
 	font-size: 30px;
+	height: 33px;
+	overflow: hidden;
 }
 
 .carousel-caption p {
@@ -71,7 +73,7 @@ right: 0px;
 font-size: 23px;
 }
 
-.sa-col-1 {
+#sa_call_actions .sa-col-1 {
 background: #ececec;
 padding: 16px 16px 32px 16px;
 }
