adiciona ID da home para evitar conflitos de CSS com a pagina blog.php

--- a/wp-content/themes/sa2015/css/home.css
+++ b/wp-content/themes/sa2015/css/home.css
@@ -85,7 +85,7 @@ text-shadow: 2px 3px 10px #888;
 text-transform: uppercase;
 }
 
-.sa-col-1 h1 {
+#sa_call_actions .sa-col-1 h1 {
 	padding: 0px;
 	margin: 0px 0px 16px 0px;
 
@@ -107,7 +107,8 @@ font-size: 12px;
 font-weight: bold;
 }
 
-.sa-col-2 img, .sa-col-3 img {
+#sa_call_actions .sa-col-2 img,
+#sa_call_actions .sa-col-3 img {
 top: -70px;
 position: relative;
 z-index: -1;
