--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -56,3 +56,65 @@ li {
 #sa_single {
 	margin-top: 140px;
 }
+
+div#sa_conteudo {
+padding-left: 0px;
+}
+
+#sa_conteudo h1 {
+color: #76b2c3;
+background: #ececec;
+margin: 0px 0px 24px 0px;
+padding: 12px 16px;
+text-transform: uppercase;
+font-size: 30px;
+}
+
+#sa_clientes h1 {
+font-weight: bolder;
+color: #fff;
+text-shadow: 2px 3px 10px #888;
+text-transform: uppercase;
+margin-top: 12px;
+}
+
+.sa-titulo-clientes {
+overflow: hidden;
+height: 70px;
+margin-bottom: 6px;
+}
+
+img.sa-sidebar-titulo {
+width: 100%;
+z-index: -1;
+bottom: 61px;
+position: relative;
+}
+
+#sa_clientes .thumbnail > img {
+width: 100%;
+}
+
+#sa_coluna .thumbnail {
+border: none;
+margin-bottom: 2px;
+}
+
+.sa_mold_logos {
+border: solid 1px;
+padding: 12px;
+}
+
+.sa_img_logos {
+height: 100px;
+overflow: hidden;
+display: flex;
+align-items: center;
+}
+
+.sa_mold_logos > h2 {
+	margin: 0px;
+	text-align: center;
+	font-size: 16px;
+	font-weight: inherit;
+}
