cria template fullwidth para paginas sem coluna lateral

--- a/wp-content/themes/sa2015/css/single.css
+++ b/wp-content/themes/sa2015/css/single.css
@@ -2,11 +2,13 @@
    ###   single   ###
    ################## */
 
-#sa_single {
+#sa_single,
+#sa_fullwidth {
 	margin-top: 140px;
 }
 
-div#sa_conteudo {
+div#sa_conteudo,
+div#sa_fullwidth {
 padding-left: 0px;
 }
 
