--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -49,4 +49,10 @@ li {
     align-items: center;
 }
 
+/* ######################
+   ###   full width   ###
+   ###################### */
 
+#sa_fullwidth {
+	margin-top: 140px;
+}
