concerta problema da largura do footer em todo o site e acerta css também

--- a/wp-content/themes/sa2015/css/metodologias.css
+++ b/wp-content/themes/sa2015/css/metodologias.css
@@ -27,7 +27,7 @@ margin-top: 8px;
 font-weight: bold;
 }
 
-#sa_metodologias p {
+#sa_metodologias > p {
 text-align: justify;
 font-size: 13px;
 line-height: 21px;
