--- a/wp-content/themes/sa2015/css/single.css
+++ b/wp-content/themes/sa2015/css/single.css
@@ -2,14 +2,23 @@
    ###   single   ###
    ################## */
 
-#sa_single,
-#sa_fullwidth {
+#sa_single {
 	margin-top: 140px;
 }
 
-div#sa_conteudo,
-div#sa_fullwidth {
+div#sa_conteudo {
 padding-left: 0px;
+margin-left: -15px;
+padding-right: 0px;
+margin-right: 15px;
+}
+
+#sa_fullwidth > div#sa_conteudo {
+	margin: 0px;
+}
+
+div#sa_coluna {
+padding-right: 0px;
 }
 
 #sa_conteudo h1 {
@@ -28,6 +37,7 @@ color: #fff;
 text-shadow: 2px 3px 10px #888;
 text-transform: uppercase;
 margin-top: 12px;
+z-index: 5;
 }
 
 .sa-titulo-clientes,
@@ -39,7 +49,7 @@ margin-bottom: 6px;
 
 img.sa-sidebar-titulo {
 width: 100%;
-z-index: -1;
+z-index: 0;
 bottom: 61px;
 position: relative;
 }
