termina sinle-webinars.php mantem organizado colocando css em webinars.css

--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -15,6 +15,7 @@ Version: 1.0.0
 @import url('css/blogs.css'); 
 @import url('css/single.css'); 
 @import url('css/archives.css'); 
+@import url('css/webinars.css'); 
 
 @font-face {
 	font-family: MyriadPro;
