--- a/wp-content/themes/sa2015/css/header.css
+++ b/wp-content/themes/sa2015/css/header.css
@@ -15,6 +15,11 @@
 	padding-top: 15px;
 }
 
+#header .col-sm-8,
+#header .col-sm-4 {
+padding: 0px;
+}
+
 .navbar {
 	margin-bottom: 0px;
 	border: none;
@@ -29,7 +34,7 @@
 }
 
 .navbar-nav > li {
-	border-left: 2px solid blue;
+	border-left: 2px solid #76b2c3;
 }
 
 .navbar-nav > li.nodivider {
@@ -56,14 +61,27 @@
 
 div#links-header {
 	margin-top: 20px;
+	margin-left: 18px;
+}
+
+#links-header img {
+margin-right: 11px;
 }
 
 div#login-area {
-background-color: #19ADAD;
-width: 365px;
-height: 40px;
-padding-top: 8px;
-padding-left: 8px;
+margin-left: 18px;
+background-color: #76b2c3;
+height: 38px;
+overflow: hidden;
+}
+
+.sa_logado {
+	margin-top: 8px;
+	font-weight: bolder;
+}
+
+#login-form span {
+margin-right: 20px;
 }
 
 img.fone {
@@ -77,3 +95,43 @@ a:hover {
 	color: #666;
 	text-decoration: none;
 }
+
+#sa_loginform p {
+display: inline;
+color: #fff;
+font-size: 12px;
+letter-spacing: 1.1px;
+}
+
+#sa_loginform input {
+width: 120px;
+text-align: center;
+color: #666;
+}
+
+input#sa_wp-submit {
+width: 20px;
+height: 20px;
+border: none;
+box-sizing: content-box;
+background-image: url("../img/seta-btn-login.png");
+color: transparent;
+padding: 0px;
+margin: 0px;
+}
+
+form#sa_loginform {
+margin-top: 6px;
+margin-left: 10px;
+margin-right: 10px;
+}
+
+#sa_loginform label {
+font-weight: normal;
+margin: 0px 2px 0px 3px;
+}
+
+.sa_logado a, .sa_logado span {
+color: #fff;
+}
+
