--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -60,3 +60,41 @@ a {
 	color: #666;
 }
 
+h2 {
+background: #4999af;
+color: #fff;
+font-weight: normal;
+font-size: 24px;
+letter-spacing: 0.5px;
+padding: 10px 18px;
+}
+
+p {
+margin: 0px 0px 5px;
+color: #666;
+letter-spacing: 0.5px;
+padding: 0px;
+line-height: 1.5;
+}
+
+h4 {
+color: #4999af;
+}
+
+ul {
+margin-top: 0;
+margin-bottom: 10px;
+list-style: square;
+list-style-image: url('../sa2015/img/li.gif');
+padding: 0px 0px 0px 15px;
+}
+
+li {
+	list-style: inherit;
+}
+
+li h3 {
+font-size: 17px;
+position: relative;
+top: -2px;
+}
