--- a/wp-content/themes/sa2015/css/header.css
+++ b/wp-content/themes/sa2015/css/header.css
@@ -20,6 +20,17 @@
 padding: 0px;
 }
 
+#header h1 {
+color: #28427e;
+font-size: 13px;
+font-weight: normal;
+text-align: center;
+text-transform: uppercase;
+margin: 5px 0px 0px;
+letter-spacing: 0.5px;
+line-height: 1.3;
+}
+
 .navbar {
 	margin-bottom: 0px;
 	border: none;
@@ -42,7 +53,7 @@ padding: 0px;
 }
 
 #header .navbar > .container-fluid {
-	margin-top: 30px;
+	margin-top: 10px;
 	padding: 0px;
 }
 
@@ -59,8 +70,12 @@ padding: 0px;
 	padding: 0px;
 }
 
+#header nav.navbar {
+min-height: 30px;
+}
+
 div#links-header {
-	margin-top: 20px;
+	margin-top: 28px;
 	margin-left: 18px;
 }
 
