--- a/wp-content/themes/sa2015/css/home.css
+++ b/wp-content/themes/sa2015/css/home.css
@@ -46,11 +46,13 @@ padding: 10px 20px;
 	font-size: 30px;
 	height: 33px;
 	overflow: hidden;
+	color: #fff;
 }
 
 .carousel-caption p {
 height: 42px;
 overflow: hidden;
+color: #fff;
 }
 
 p.conheca {
@@ -69,10 +71,10 @@ background: black;
 position: absolute;
 width: 27px;
 height: 33px;
-padding: 0px 7px;
+padding: 0px 8px;
 top: -2px;
 right: 0px;
-font-size: 23px;
+font-size: 19px;
 }
 
 #sa_call_actions .sa-col-1 {
@@ -158,6 +160,8 @@ font-size: 16px;
 text-transform: uppercase;
 color: #559aad;
 font-weight: 100;
+background: inherit;
+padding: 0px;
 }
 
 #sa_call_actions p {
@@ -243,3 +247,4 @@ overflow: hidden;
 width: 10px;
 margin-left: 8px;
 }
+
