--- a/wp-content/themes/sa2015/style.css
+++ b/wp-content/themes/sa2015/style.css
@@ -109,3 +109,41 @@ background-image: url('../sa2015/img/sa-btn-seta.gif');
 background-repeat: no-repeat;
 background-position: right;
 }
+
+/* ####################
+   ###   cadastro   ###
+   #################### */
+
+h2.sa_ou {  
+border-radius: 100px;
+color: #4999AF;
+font-weight: bold;
+font-size: 20px;
+text-transform: uppercase;
+border-color: #4999AF;
+border-style: solid;
+background-color: #fff;
+text-align: center;
+padding: 9px;
+}
+
+#loginform p {
+text-align: right;
+}
+
+.sa_cadastro h1 {
+background-color: #4999AF;
+color: #fff;
+padding: 8px 18px;
+}
+
+.sa_cadastro span {
+display: inline-block;
+font-size: 17px;
+font-weight: normal;
+margin-left: 20px;
+}
+
+.sa_cadastro p {
+color: #fff;
+}
