acerta bugs dos webinars, e bug do login
login >>>> quando a pessoa logava da home, duplicava o site (ex. www.souza.com.br/sousa.com.br)

--- a/wp-content/themes/sa2015/css/webinars.css
+++ b/wp-content/themes/sa2015/css/webinars.css
@@ -85,8 +85,8 @@ min-height: 194px;
 
 .sa_webinars_anteriores h2 {
 margin: 0px;
-color: #239999;
-font-size: 24px;
+color: #fff;
+font-size: 16px;
 }
 
 .sa_webinars_anteriores p {
